--- a/ElasticKibanaNetCore.Web/appsettings.json
+++ b/ElasticKibanaNetCore.Web/appsettings.json
@@ -10,8 +10,8 @@
   "AllowedHosts": "*",
   "ElasticConfiguration": {
     "Uri": "http://localhost:9200/",
-    "Username": "pix-app",
-    "Password": "1q2w3e4r5t",
-    "Index": "pix-{0:yyyy.MM.dd}"
+    "Username": "elastic",
+    "Password": "MagicWord",
+    "Index": "logstash"
   }
 }
